--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
-python3
-psycopg2
+chardet==2.3.0
+language-selector==0.1
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
+pycodestyle==2.4.0
+pycurl==7.43.0
+pygobject==3.20.0
+python-apt==1.1.0b1+ubuntu0.16.4.2
+python-debian==0.1.27
+python-systemd==231
+requests==2.9.1
+six==1.10.0
+ssh-import-id==5.5
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.13.1
 
 
